Extra: fixed sign in link media query on mobile devices menu, still needs to match on hover color of the other links

--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,21 @@ body {
   opacity: 0.8;
   margin-top: 14.63rem;
 }
+
+@media(max-width: 576px) {
+
+  #sign_in_btn {
+    font-size: 1rem;
+    display: contents;
+    font-weight: 400;
+    color: #adadad;
+  }
+
+  #sign_in_parent.ml-2 {
+    margin-left: 0rem !important;
+  }
+
+  .btn:hover {
+    color: #ffffff !important;
+  }
+}
